--- a/index.html
+++ b/index.html
@@ -323,7 +323,19 @@
             </section>
         </aside>
     </main>
-
+    <section class="bottom-box">
+        <section class="bottom-other-articles">
+            <header>
+                <span>more on space & cosmos</span>
+            </header>
+            <span><a href="#">More on Space & Cosmos</a></span>
+            <section class="bottom-articles"></section>
+            <section class="bottom-articles" id="second-bottom-box"></section>
+            <section class="bottom-articles"></section>
+            <section class="bottom-articles"></section>
+            <section class="bottom-articles"></section>
+        </section>
+    </section>
     <footer></footer>
 </body>
 
