--- a/index.html
+++ b/index.html
@@ -326,14 +326,23 @@
     <section class="bottom-box">
         <section class="bottom-other-articles">
             <header>
-                <span>more on space & cosmos</span>
+                <span><a href="#">More on Space & Cosmos</a></span>
             </header>
-            <span><a href="#">More on Space & Cosmos</a></span>
-            <section class="bottom-articles"></section>
+            <section class="bottom-articles">
+                <figure>
+                    <img src="./assets/images/spacestation.jpg" alt="">
+                    <figcaption class="caption-small bottom-articles-caption">NASA</figcaption>
+                </figure>
+                <span class="bottom-article-title">u.s, russia respond to space station leak rumors</span>
+                <span class="bottom-article-date">Sept. 14</span>
+            </section>
             <section class="bottom-articles" id="second-bottom-box"></section>
             <section class="bottom-articles"></section>
             <section class="bottom-articles"></section>
             <section class="bottom-articles"></section>
+        </section>
+        <section class="bottom-sidebar">
+
         </section>
     </section>
     <footer></footer>
