fix some style and add some style

--- a/index.html
+++ b/index.html
@@ -331,10 +331,11 @@
             <section class="bottom-articles">
                 <figure>
                     <img src="./assets/images/spacestation.jpg" alt="">
-                    <figcaption class="caption-small bottom-articles-caption">NASA</figcaption>
+                    <figcaption class="bottom-articles-caption">NASA</figcaption>
                 </figure>
-                <span class="bottom-article-title">u.s, russia respond to space station leak rumors</span>
+                <h2 class="bottom-article-title"><a href="#">U.S., russia respond to space station leak rumors</a></h2>
                 <span class="bottom-article-date">Sept. 14</span>
+
             </section>
             <section class="bottom-articles" id="second-bottom-box"></section>
             <section class="bottom-articles"></section>
