try to fix bottom box

--- a/index.html
+++ b/index.html
@@ -328,51 +328,56 @@
             <header>
                 <span><a href="#">More on Space & Cosmos</a></span>
             </header>
-            <section class="bottom-articles">
-                <a href="#">
-                    <figure>
-                        <img src="./assets/images/spacestation.jpg" alt="">
-                        <figcaption class="bottom-articles-caption">NASA</figcaption>
-                    </figure>
-                </a>
-                <h2 class="bottom-article-title"><a href="#">U.S., russia respond to space station leak rumors</a></h2>
-                <span class="bottom-article-date">Sept. 14</span>
-            </section>
+            <div>
+                <section class="bottom-articles">
+                    <a href="#">
+                        <figure>
+                            <img src="./assets/images/spacestation.jpg" alt="">
+                            <figcaption class="bottom-articles-caption">NASA</figcaption>
+                        </figure>
+                    </a>
+                    <h2 class="bottom-article-title"><a href="#">U.S., russia respond to space station leak rumors</a></h2>
+                    <span class="bottom-article-date">Sept. 14</span>
+                </section>
 
-            <section class="bottom-articles" id="second-bottom-box">
-                <a href="#">
-                    <figure>
-                        <img src="./assets/images/moon-buggy.jpg" alt="">
-                        <figcaption class="bottom-articles-caption">NASA, via Agence France-Presse — Getty Images</figcaption>
-                    </figure>
-                </a>
-                <h2 class="bottom-article-title"><a href="#">Corporate Sponsors for NASA? Agency to Study Making Space
-                        for Brands</a></h2>
-                <span class="bottom-article-date">Sept. 12</span>
-            </section>
-            <section class="bottom-articles">
-                <a href="#">
-                    <figure>
-                        <img src="./assets/images/asteroid.jpg" alt="">
-                        <figcaption class="bottom-articles-caption">NASA/Johns Hopkins University Applied Physics
-                            Laboratory/Southwest Research Institute/Steve Gribben</figcaption>
-                    </figure>
-                </a>
-                <h2 class="bottom-article-title"><a href="#">NASA’s New Horizons Spacecraft Takes First Picture of
-                        Distant Rock It Will Visit</a></h2>
-                <span class="bottom-article-date">Aug. 30</span>
-            </section>
-            <section class="bottom-articles">
-                <a href="#">
-                    <figure>
-                        <img src="./assets/images/ruby-payne.jpg" alt="">
-                        <figcaption class="bottom-articles-caption"></figcaption>
-                    </figure>
-                </a>
-                <h2 class="bottom-article-title"><a href="#">Overlooked No More: Ruby Payne-Scott, Who Explored Space
-                        With Radio Waves</a></h2>
-                <span class="bottom-article-date">Aug. 30</span>
-            </section>
+                <section class="bottom-articles">
+                    <a href="#">
+                        <figure>
+                            <img src="./assets/images/moon-buggy.jpg" alt="">
+                            <figcaption class="bottom-articles-caption">NASA, via Agence France-Presse — Getty Images</figcaption>
+                        </figure>
+                    </a>
+                    <h2 class="bottom-article-title"><a href="#">Corporate Sponsors for NASA? Agency to Study Making
+                            Space
+                            for Brands</a></h2>
+                    <span class="bottom-article-date">Sept. 12</span>
+                </section>
+                <section class="bottom-articles" id="blank-content"></section>
+                <section class="bottom-articles">
+                    <a href="#">
+                        <figure>
+                            <img src="./assets/images/asteroid.jpg" alt="">
+                            <figcaption class="bottom-articles-caption">NASA/Johns Hopkins University Applied Physics
+                                Laboratory/Southwest Research Institute/Steve Gribben</figcaption>
+                        </figure>
+                    </a>
+                    <h2 class="bottom-article-title"><a href="#">NASA’s New Horizons Spacecraft Takes First Picture of
+                            Distant Rock It Will Visit</a></h2>
+                    <span class="bottom-article-date">Aug. 30</span>
+                </section>
+                <section class="bottom-articles">
+                    <a href="#">
+                        <figure>
+                            <img src="./assets/images/ruby-payne.jpg" alt="">
+                            <figcaption class="bottom-articles-caption"></figcaption>
+                        </figure>
+                    </a>
+                    <h2 class="bottom-article-title"><a href="#">Overlooked No More: Ruby Payne-Scott, Who Explored
+                            Space
+                            With Radio Waves</a></h2>
+                    <span class="bottom-article-date">Aug. 30</span>
+                </section>
+            </div>
         </section>
         <section class="bottom-articles">
             <a href="#">
@@ -385,7 +390,6 @@
                     One Believed His Ideas About the Sun.</a></h2>
             <span class="bottom-article-date">Aug. 10</span>
         </section>
-        <section class="bottom-articles" id="blank-content"></section>
     </section>
     <section class="bottom-sidebar">
 
