fix some html and add editor's pick
1. stylle on edito's pick section

--- a/index.html
+++ b/index.html
@@ -376,22 +376,57 @@
                         With Radio Waves</a></h2>
                 <span class="bottom-article-date">Aug. 30</span>
             </section>
+            <section class="bottom-articles">
+                <a href="#">
+                    <figure>
+                        <img src="./assets/images/parker-solar.jpg" alt="">
+                        <figcaption class="bottom-articles-caption">University of Chicago</figcaption>
+                    </figure>
+                </a>
+                <h2 class="bottom-article-title"><a href="#">NASA’s Parker Solar Probe Is Named for Him. 60 Years Ago,
+                        No
+                        One Believed His Ideas About the Sun.</a></h2>
+                <span class="bottom-article-date">Aug. 10</span>
+            </section>
         </section>
-        <section class="bottom-articles">
-            <a href="#">
-                <figure>
-                    <img src="./assets/images/parker-solar.jpg" alt="">
-                    <figcaption class="bottom-articles-caption">University of Chicago</figcaption>
-                </figure>
-            </a>
-            <h2 class="bottom-article-title"><a href="#">NASA’s Parker Solar Probe Is Named for Him. 60 Years Ago, No
-                    One Believed His Ideas About the Sun.</a></h2>
-            <span class="bottom-article-date">Aug. 10</span>
+        <section class="editors-pick">
+            <header>
+                <a href="#">Editors’ Picks</a>
+            </header>
+            <section class="bottom-articles">
+                <a href="#">
+                    <figure>
+                        <img src="./assets/images/spacestation.jpg" alt="">
+                        <figcaption class="bottom-articles-caption">NASA</figcaption>
+                    </figure>
+                </a>
+                <h2 class="bottom-article-title"><a href="#">U.S., russia respond to space station leak rumors</a></h2>
+                <span class="bottom-article-date">Sept. 14</span>
+            </section>
+            <section class="bottom-articles">
+                <a href="#">
+                    <figure>
+                        <img src="./assets/images/spacestation.jpg" alt="">
+                        <figcaption class="bottom-articles-caption">NASA</figcaption>
+                    </figure>
+                </a>
+                <h2 class="bottom-article-title"><a href="#">U.S., russia respond to space station leak rumors</a></h2>
+                <span class="bottom-article-date">Sept. 14</span>
+            </section>
+            <section class="bottom-articles">
+                <a href="#">
+                    <figure>
+                        <img src="./assets/images/spacestation.jpg" alt="">
+                        <figcaption class="bottom-articles-caption">NASA</figcaption>
+                    </figure>
+                </a>
+                <h2 class="bottom-article-title"><a href="#">U.S., russia respond to space station leak rumors</a></h2>
+                <span class="bottom-article-date">Sept. 14</span>
+            </section>
         </section>
-    </section>
-    <section class="bottom-sidebar">
+        <section class="bottom-sidebar">
 
-    </section>
+        </section>
     </section>
     <footer></footer>
 </body>
