Finish bottom article main list and start sidebar
1. Finish content of bottom article list
2. Start the sidebar article list

--- a/index.html
+++ b/index.html
@@ -396,36 +396,52 @@
             <section class="bottom-articles">
                 <a href="#">
                     <figure>
-                        <img src="./assets/images/spacestation.jpg" alt="">
-                        <figcaption class="bottom-articles-caption">NASA</figcaption>
+                        <img src="./assets/images/trump-won.jpg" alt="">
+                        <figcaption class="bottom-articles-caption">Ryan Christopher Jones for The New York Times</figcaption>
                     </figure>
                 </a>
-                <h2 class="bottom-article-title"><a href="#">U.S., russia respond to space station leak rumors</a></h2>
-                <span class="bottom-article-date">Sept. 14</span>
+                <h2 class="bottom-article-title"><a href="#">Trump Won Pennsylvania. Democrats Want the State (and His
+                        Voters) Back.</a></h2>
+                <span class="bottom-article-date">Aug. 19</span>
             </section>
             <section class="bottom-articles">
                 <a href="#">
                     <figure>
-                        <img src="./assets/images/spacestation.jpg" alt="">
-                        <figcaption class="bottom-articles-caption">NASA</figcaption>
+                        <img src="./assets/images/riz-ahmed.jpg" alt="">
+                        <figcaption class="bottom-articles-caption">Sharif Hamza for The New York Times</figcaption>
                     </figure>
                 </a>
-                <h2 class="bottom-article-title"><a href="#">U.S., russia respond to space station leak rumors</a></h2>
-                <span class="bottom-article-date">Sept. 14</span>
+                <h2 class="bottom-article-title"><a href="#">Riz Ahmed Acts His Way Out of Every Cultural Pigeonhole</a></h2>
+                <span class="bottom-article-date">Aug. 29</span>
             </section>
             <section class="bottom-articles">
                 <a href="#">
                     <figure>
-                        <img src="./assets/images/spacestation.jpg" alt="">
-                        <figcaption class="bottom-articles-caption">NASA</figcaption>
+                        <img src="./assets/images/img-1.png" alt="">
+                        <figcaption class="bottom-articles-caption">Sarah Anne Ward for The New York Times</figcaption>
                     </figure>
                 </a>
-                <h2 class="bottom-article-title"><a href="#">U.S., russia respond to space station leak rumors</a></h2>
-                <span class="bottom-article-date">Sept. 14</span>
+                <h2 class="bottom-article-title"><a href="#">A Teacher Made a Hitler Joke in the Classroom. It Tore the
+                        School Apart.</a></h2>
+                <span class="bottom-article-date">Sept. 5</span>
             </section>
         </section>
         <section class="bottom-sidebar">
-
+            <header>
+                <a href="#">Trending</a>
+            </header>
+            <ul class="bottom-sidebar-articles">
+                <li><a href="#">Brett Kavanaugh’s Nomination in Turmoil as Accuser Comes Forward</a></li>
+                <li><a href="#">Hurricane Florence: Storm ‘Has Never Been More Dangerous’</a></li>
+                <li><a href="#">Opinion: What Do We Actually Know About the Economy? (Wonkish)</a></li>
+                <li><a href="#">Eliud Kipchoge Is the Greatest Marathoner, Ever</a></li>
+                <li><a href="#">Opinion: ‘Trump Derangement Syndrome’ Is a Myth</a></li>
+                <li><a href="#">Opinion: Delay the Vote — for Kavanaugh, for His Accuser and for the Court</a></li>
+                <li><a href="#">One Face of Immigration in America Is a Family Tree Rooted in Asia</a></li>
+                <li><a href="#">In a Sour Season Between the U.K. and Russia, a New Casualty: Debutantes</a></li>
+                <li><a href="#">How Maya Rudolph Became the Master of Impressions</a></li>
+                <li><a href="#">As Trump’s Trade War Mounts, China’s Wall Street Allies Lose Clout</a></li>
+            </ul>
         </section>
     </section>
     <footer></footer>
