add footer sections
- structured the footer section on html

--- a/index.html
+++ b/index.html
@@ -444,7 +444,18 @@
             </ul>
         </section>
     </section>
-    <footer></footer>
+    <footer class="main-footer">
+        <header>
+
+        </header>
+        <section class="footer-body">
+            <aside class="footer-body-menus-left"></aside>
+            <aside class="footer-body-menus-left"></aside>
+        </section>
+        <section class="footer-copyright">
+
+        </section>
+    </footer>
 </body>
 
 </html>
