Start content and styling for main footer

--- a/index.html
+++ b/index.html
@@ -446,10 +446,46 @@
     </section>
     <footer class="main-footer">
         <header>
-
+            <div><img src="./assets/images/nyt.png" alt=""></di>
+                <span class="footer-small"><a href="" #>Go to Home Page »</a></span>
         </header>
         <section class="footer-body">
-            <aside class="footer-body-menus-left"></aside>
+            <section class="footer-links">
+                <section class="article-categories">
+                    <header>NEWS</header>
+                    <ul>
+                        <li class="footer-topics"><a href="">home page</a></li>
+                        <li class="footer-topics"><a href="">world</a></li>
+                        <li class="footer-topics"><a href="">u.s.</a></li>
+                        <li class="footer-topics"><a href="">politics</a></li>
+                        <li class="footer-topics"><a href="">new york</a></li>
+                        <li class="footer-topics"><a href="">business</a></li>
+                        <li class="footer-topics"><a href="">tech</a></li>
+                        <li class="footer-topics"><a href="">science</a></li>
+                        <li class="footer-topics"><a href="">sports</a></li>
+                        <li class="footer-topics"><a href="">obituaries</a></li>
+                        <li class="footer-topics"><a href="">today's paper</a></li>
+                        <li class="footer-topics"><a href="">corrections</a></li>
+                    </ul>
+                </section>
+                <section class="article-categories">
+                    <header></header>
+                    <ul></ul>
+                </section>
+                <section class="article-categories">
+                    <header></header>
+                    <ul></ul>
+                </section>
+                <section class="article-categories">
+                    <header></header>
+                    <ul></ul>
+                </section>
+                <section class="article-categories">
+                    <header></header>
+                    <ul></ul>
+                </section>
+            </section>
+
             <aside class="footer-body-menus-left"></aside>
         </section>
         <section class="footer-copyright">
