fix some html and css
- Add style on footer menu
- fix some footer positioning

--- a/index.html
+++ b/index.html
@@ -469,6 +469,57 @@
                     </ul>
                 </section>
                 <section class="article-categories">
+                    <header>NEWS</header>
+                    <ul>
+                        <li class="footer-topics"><a href="">home page</a></li>
+                        <li class="footer-topics"><a href="">world</a></li>
+                        <li class="footer-topics"><a href="">u.s.</a></li>
+                        <li class="footer-topics"><a href="">politics</a></li>
+                        <li class="footer-topics"><a href="">new york</a></li>
+                        <li class="footer-topics"><a href="">business</a></li>
+                        <li class="footer-topics"><a href="">tech</a></li>
+                        <li class="footer-topics"><a href="">science</a></li>
+                        <li class="footer-topics"><a href="">sports</a></li>
+                        <li class="footer-topics"><a href="">obituaries</a></li>
+                        <li class="footer-topics"><a href="">today's paper</a></li>
+                        <li class="footer-topics"><a href="">corrections</a></li>
+                    </ul>
+                </section>
+                <section class="article-categories">
+                    <header>NEWS</header>
+                    <ul>
+                        <li class="footer-topics"><a href="">home page</a></li>
+                        <li class="footer-topics"><a href="">world</a></li>
+                        <li class="footer-topics"><a href="">u.s.</a></li>
+                        <li class="footer-topics"><a href="">politics</a></li>
+                        <li class="footer-topics"><a href="">new york</a></li>
+                        <li class="footer-topics"><a href="">business</a></li>
+                        <li class="footer-topics"><a href="">tech</a></li>
+                        <li class="footer-topics"><a href="">science</a></li>
+                        <li class="footer-topics"><a href="">sports</a></li>
+                        <li class="footer-topics"><a href="">obituaries</a></li>
+                        <li class="footer-topics"><a href="">today's paper</a></li>
+                        <li class="footer-topics"><a href="">corrections</a></li>
+                    </ul>
+                </section>
+                <section class="article-categories">
+                    <header>NEWS</header>
+                    <ul>
+                        <li class="footer-topics"><a href="">home page</a></li>
+                        <li class="footer-topics"><a href="">world</a></li>
+                        <li class="footer-topics"><a href="">u.s.</a></li>
+                        <li class="footer-topics"><a href="">politics</a></li>
+                        <li class="footer-topics"><a href="">new york</a></li>
+                        <li class="footer-topics"><a href="">business</a></li>
+                        <li class="footer-topics"><a href="">tech</a></li>
+                        <li class="footer-topics"><a href="">science</a></li>
+                        <li class="footer-topics"><a href="">sports</a></li>
+                        <li class="footer-topics"><a href="">obituaries</a></li>
+                        <li class="footer-topics"><a href="">today's paper</a></li>
+                        <li class="footer-topics"><a href="">corrections</a></li>
+                    </ul>
+                </section>
+                <!-- <section class="article-categories">
                     <header></header>
                     <ul></ul>
                 </section>
@@ -483,7 +534,7 @@
                 <section class="article-categories">
                     <header></header>
                     <ul></ul>
-                </section>
+                </section> -->
             </section>
 
             <aside class="footer-body-menus-left"></aside>
