add elements and styles
   1. add contents for all footers right side menus
   2. give them a perfect styles
   3. fix some style problems on that footer body

--- a/index.html
+++ b/index.html
@@ -446,11 +446,12 @@
     </section>
     <footer class="main-footer">
         <header>
-            <div><img src="./assets/images/nyt.png" alt=""></di>
-                <span class="footer-small"><a href="" #>Go to Home Page »</a></span>
+            <img src="./assets/images/nyt.png" alt="">
+            <span class="footer-small"><a href="" #>Go to Home Page »</a></span>
         </header>
         <section class="footer-body">
             <section class="footer-links">
+                <!-- NEWS Menu Sections -->
                 <section class="article-categories">
                     <header>NEWS</header>
                     <ul>
@@ -468,76 +469,82 @@
                         <li class="footer-topics"><a href="">corrections</a></li>
                     </ul>
                 </section>
+
+                <!-- OPINION Menu Sections -->
                 <section class="article-categories">
-                    <header>NEWS</header>
+                    <header>OPINION</header>
                     <ul>
-                        <li class="footer-topics"><a href="">home page</a></li>
-                        <li class="footer-topics"><a href="">world</a></li>
-                        <li class="footer-topics"><a href="">u.s.</a></li>
-                        <li class="footer-topics"><a href="">politics</a></li>
-                        <li class="footer-topics"><a href="">new york</a></li>
-                        <li class="footer-topics"><a href="">business</a></li>
-                        <li class="footer-topics"><a href="">tech</a></li>
-                        <li class="footer-topics"><a href="">science</a></li>
-                        <li class="footer-topics"><a href="">sports</a></li>
-                        <li class="footer-topics"><a href="">obituaries</a></li>
-                        <li class="footer-topics"><a href="">today's paper</a></li>
-                        <li class="footer-topics"><a href="">corrections</a></li>
+                        <li class="footer-topics"><a href="">today's opinion</a></li>
+                        <li class="footer-topics"><a href="">op-ed columnists</a></li>
+                        <li class="footer-topics"><a href="">editorials</a></li>
+                        <li class="footer-topics"><a href="">op-ed Contributors</a></li>
+                        <li class="footer-topics"><a href="">letters</a></li>
+                        <li class="footer-topics"><a href="">sunday review</a></li>
+                        <li class="footer-topics"><a href="">video: opinion</a></li>
                     </ul>
                 </section>
+
+                <!-- ARTS Menu Sections -->
                 <section class="article-categories">
-                    <header>NEWS</header>
+                    <header>ARTS</header>
                     <ul>
-                        <li class="footer-topics"><a href="">home page</a></li>
-                        <li class="footer-topics"><a href="">world</a></li>
-                        <li class="footer-topics"><a href="">u.s.</a></li>
-                        <li class="footer-topics"><a href="">politics</a></li>
-                        <li class="footer-topics"><a href="">new york</a></li>
-                        <li class="footer-topics"><a href="">business</a></li>
-                        <li class="footer-topics"><a href="">tech</a></li>
-                        <li class="footer-topics"><a href="">science</a></li>
-                        <li class="footer-topics"><a href="">sports</a></li>
-                        <li class="footer-topics"><a href="">obituaries</a></li>
-                        <li class="footer-topics"><a href="">today's paper</a></li>
-                        <li class="footer-topics"><a href="">corrections</a></li>
+                        <li class="footer-topics"><a href="">today's arts</a></li>
+                        <li class="footer-topics"><a href="">art & design</a></li>
+                        <li class="footer-topics"><a href="">books</a></li>
+                        <li class="footer-topics"><a href="">dance</a></li>
+                        <li class="footer-topics"><a href="">movies</a></li>
+                        <li class="footer-topics"><a href="">music</a></li>
+                        <li class="footer-topics"><a href="">television</a></li>
+                        <li class="footer-topics"><a href="">theater</a></li>
+                        <li class="footer-topics"><a href="">watching</a></li>
+                        <li class="footer-topics"><a href="">video: arts</a></li>
                     </ul>
                 </section>
+
+                <!-- LIVING Menu Sections -->
                 <section class="article-categories">
-                    <header>NEWS</header>
+                    <header>LIVING</header>
                     <ul>
-                        <li class="footer-topics"><a href="">home page</a></li>
-                        <li class="footer-topics"><a href="">world</a></li>
-                        <li class="footer-topics"><a href="">u.s.</a></li>
-                        <li class="footer-topics"><a href="">politics</a></li>
-                        <li class="footer-topics"><a href="">new york</a></li>
-                        <li class="footer-topics"><a href="">business</a></li>
-                        <li class="footer-topics"><a href="">tech</a></li>
-                        <li class="footer-topics"><a href="">science</a></li>
-                        <li class="footer-topics"><a href="">sports</a></li>
-                        <li class="footer-topics"><a href="">obituaries</a></li>
-                        <li class="footer-topics"><a href="">today's paper</a></li>
-                        <li class="footer-topics"><a href="">corrections</a></li>
+                        <li class="footer-topics"><a href="">automobiles</a></li>
+                        <li class="footer-topics"><a href="">crossword</a></li>
+                        <li class="footer-topics"><a href="">food</a></li>
+                        <li class="footer-topics"><a href="">Cooking</a></li>
+                        <li class="footer-topics"><a href="">education</a></li>
+                        <li class="footer-topics"><a href="">fashion & style</a></li>
+                        <li class="footer-topics"><a href="">health</a></li>
+                        <li class="footer-topics"><a href="">jobs</a></li>
+                        <li class="footer-topics"><a href="">magazine</a></li>
+                        <li class="footer-topics"><a href="">real estate</a></li>
+                        <li class="footer-topics"><a href="">t magaziner</a></li>
+                        <li class="footer-topics"><a href="">travel</a></li>
+                        <li class="footer-topics"><a href="">weddings</a></li>
                     </ul>
                 </section>
-                <!-- <section class="article-categories">
-                    <header></header>
-                    <ul></ul>
-                </section>
+
+                <!-- MORE Menu Sections -->
                 <section class="article-categories">
-                    <header></header>
-                    <ul></ul>
+                    <header>MORE</header>
+                    <ul>
+                        <li class="footer-topics"><a href="">Reader Center</a></li>
+                        <li class="footer-topics"><a href="">tools & services</a></li>
+                        <li class="footer-topics"><a href="">N.Y.C. events guide</a></li>
+                        <li class="footer-topics"><a href="">multimedia</a></li>
+                        <li class="footer-topics"><a href="">photography</a></li>
+                        <li class="footer-topics"><a href="">video</a></li>
+                        <li class="footer-topics"><a href="">NYT store</a></li>
+                        <li class="footer-topics"><a href="">times journeys</a></li>
+                        <li class="footer-topics"><a href="">manage my account</a></li>
+                        <li class="footer-topics"><a href="">the learning network</a></li>
+                        <li class="footer-topics"><a href="">t magaziner</a></li>
+                        <li class="footer-topics"><a href="">travel</a></li>
+                        <li class="footer-topics"><a href="">weddings</a></li>
+                    </ul>
                 </section>
-                <section class="article-categories">
-                    <header></header>
-                    <ul></ul>
-                </section>
-                <section class="article-categories">
-                    <header></header>
-                    <ul></ul>
-                </section> -->
             </section>
 
-            <aside class="footer-body-menus-left"></aside>
+            <aside class="footer-body-menus-left">
+
+            </aside>
         </section>
         <section class="footer-copyright">
 
