Work on main footer sidebar
1. Add contents and style contents
2. Remove border bottom on editor box
3. Give main footer a border-top

--- a/index.html
+++ b/index.html
@@ -543,7 +543,17 @@
             </section>
 
             <aside class="footer-body-menus-left">
-
+                <header>SUBSCRIBE</header>
+                <ul class="icon-list">
+                    <li class="icon-list-item"><a href=""><i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                            Home Delivery</a></li>
+                    <li class="icon-list-item"><a href=""><i class="fa fa-font" aria-hidden="true"></i>
+                            Digital Subscriptions</a></li>
+                    <li class="icon-list-item"><a href=""><i class="fa fa-th-large" aria-hidden="true"></i>
+                            Crossword</a></li>
+                    <li class="icon-list-item"><a href=""><i class="fa fa-cutlery" aria-hidden="true"></i>
+                            Cooking</a></li>
+                </ul>
             </aside>
         </section>
         <section class="footer-copyright">
