--- a/index.html
+++ b/index.html
@@ -554,10 +554,16 @@
                     <li class="icon-list-item"><a href=""><i class="fa fa-cutlery" aria-hidden="true"></i>
                             Cooking</a></li>
                 </ul>
+                <ul class="small-menu">
+                    <li><a href="#">email newsletters</a></li>
+                    <li><a href="#">corporate subscriptions</a></li>
+                    <li><a href="#">education rate</a></li>
+                    <li><a href="#">mobile applications</a></li>
+                    <li><a href="#">replica edition</a></li>
+                </ul>
             </aside>
         </section>
         <section class="footer-copyright">
-
         </section>
     </footer>
 </body>
