add items fpr footer-copyright

--- a/index.html
+++ b/index.html
@@ -564,6 +564,19 @@
             </aside>
         </section>
         <section class="footer-copyright">
+            <ul>
+                <li><a href="#">© 2018 The New York Times Company</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Work with us</a></li>
+                <li><a href="#">Advertise</a></li>
+                <li><a href="#">Your Ad Choices</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Terms of Sale</a></li>
+                <li><a href="#">Site Map</a></li>
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Subscriptions</a></li>
+            </ul>
         </section>
     </footer>
 </body>
