Fix image caption small positioning of youtube and big satellite img

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                 The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity
                                 patterns — the signature of a universe being wrenched violently apart at its birth.
                             </p>
-                            <small class="caption-small">
+                            <small class="caption-small" id="satellite-caption">
                                 Steffen Richter/Associated Press
                             </small>
                         </figcaption>
